--- a/practise_quiz_1/index.html
+++ b/practise_quiz_1/index.html
@@ -6,17 +6,21 @@
         <meta http-equiv="X-UA-Compatible" content = "IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel = "stylesheet" href = "style.css">
-        
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
 
     <body>
         <div class="panel">
             
-            <!--- Results -->
-            <div class="result">
-            </div>
+            <!--- Results --->
+            <div class="container mt-2">
+                <div class="row">
+                  <div class="col result" id="result"></div>
+                  <div class="col result" id="score"></div>
+                </div>
+              </div>
 
-            <!--- Questions -->
+            <!--- Questions --->
             <div class="question-container" id="question">
                 Question will be here.
             </div>
@@ -31,8 +35,8 @@
 
             <!--- Navigation --->
             <div class="navigation">
-                <button class="evaluate">Evaluate</button>
-                <button class="next">Next</button>
+                <button class="evaluate" id="evaluate">Evaluate</button>
+                <button class="next" id="next">Next</button>
             </div>
 
         </div>
@@ -41,4 +45,5 @@
 </html>
 
 <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
